--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.16",
     "patternomaly": "^1.3.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
